<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/miAdd"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:title="@string/type_of_insurance"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/miLifeInsurance"
                android:title="@string/life_insurance" />
            <item
                android:id="@+id/miHealthInsurance"
                android:title="@string/health_insurance" />
            <item
                android:id="@+id/miPersonalAccident"
                android:title="@string/personal_accident_insurance" />

            <item
                android:id="@+id/miOtherAccident"
                android:title="@string/other_insurance" />
        </menu>
    </item>
    <item
        android:id="@+id/miInfo"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/info"
        app:showAsAction="always" />
    <item
        android:id="@+id/miShareApp"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share_the_app"
        app:showAsAction="always" />
</menu>