<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Main4Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/rectangle"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/row_total" />

            <!--Life Insurance!-->
            <LinearLayout
                android:id="@+id/llLifeInsuranceTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:paddingRight="6dp"
                        android:text="@string/life_insurance" />

                    <TextView
                        android:id="@+id/tvLifeInsuranceTotal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:text="@string/zero_value" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvDTWLifeInsuranceTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>
            <!--Health Insurance!-->
            <LinearLayout
                android:id="@+id/llHealthInsuranceTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:paddingRight="6dp"
                        android:text="@string/health_insurance" />

                    <TextView
                        android:id="@+id/tvHealthInsuranceTotal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:text="@string/zero_value" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvDTWHealthInsuranceTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <!--Personal Accident Insurance!-->
            <LinearLayout
                android:id="@+id/llPAInsuranceTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:paddingRight="6dp"
                        android:text="@string/personal_accident_insurance" />

                    <TextView
                        android:id="@+id/tvPAInsuranceTotal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:text="@string/zero_value" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvDTWPAInsuranceTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <!--Other Insurance!-->
            <LinearLayout
                android:id="@+id/llOtherInsuranceTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:paddingRight="6dp"
                        android:text="@string/other_insurance" />

                    <TextView
                        android:id="@+id/tvOtherInsuranceTotal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:text="@string/zero_value" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvDTWOtherInsuranceTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <!--Total All insurance policy!-->
            <LinearLayout
                android:id="@+id/llAllInsuranceTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:paddingRight="6dp"
                        android:text="@string/total_premium" />

                    <TextView
                        android:id="@+id/tvAllInsuranceTotal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:text="@string/zero_value" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvDTWAllInsuranceTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/rectangle"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SIP Goal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/term">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTerm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_access_time_black_24dp"
                        android:drawableLeft="@drawable/ic_access_time_black_24dp"
                        android:drawableEnd="@drawable/ic_backspace_black_24dp"
                        android:drawableRight="@drawable/ic_backspace_black_24dp"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/rate">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etRate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_percent"
                        android:drawableLeft="@drawable/ic_percent"
                        android:drawableEnd="@drawable/ic_backspace_black_24dp"
                        android:drawableRight="@drawable/ic_backspace_black_24dp"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!--Totally Goal Amount!-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:paddingRight="6dp"
                        android:text="@string/goal_amount" />

                    <TextView
                        android:id="@+id/tvGoalAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:text="@string/zero_value" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvDTWGoalAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <!--SIP Monthly!-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="start"
                    android:paddingRight="6dp"
                    android:text="@string/sip_monthly" />

                <TextView
                    android:id="@+id/tvSipMonthly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="start"
                    android:text="@string/zero_value" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--SIP Total Money Invested!-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:paddingRight="6dp"
                        android:text="@string/total_money_invested_through_sip" />

                    <TextView
                        android:id="@+id/tvSipTotalMoneyInvested"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start"
                        android:text="@string/zero_value" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvDTWSipTotalMoneyInvested"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <!--% of total investment per month!-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="start"
                    android:paddingRight="6dp"
                    android:text="@string/per_total_amount_invested_per_month" />

                <TextView
                    android:id="@+id/tvSipPercentagePerMonth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="start"
                    android:text="@string/zero_value" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>